# Scintillator

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: action.hh  construction.hh  detector.hh  generator.hh
src/: action.cc  construction.cc  detector.cc  generator.cc
